--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
@@ -44,13 +47,9 @@ jobs:
       run: go test -v ./...
     
     - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ steps.version.outputs.VERSION }}
-        release_name: ${{ steps.version.outputs.VERSION }} - Platform-Agnostic Git Activity Mirroring
+        name: ${{ steps.version.outputs.VERSION }} - Platform-Agnostic Git Activity Mirroring
         body: |
           ## Platform-Agnostic Git Activity Mirroring
           
@@ -62,7 +61,7 @@ jobs:
           - ✅ Daily sync operations
           - ✅ Dry-run mode for testing
           - ✅ Cross-platform binaries
-          - ✅ Privacy-first (mirrors activity, not code)
+          - ✅ Privacy-first unified mirror strategy
           
           ### Downloads
           
@@ -89,55 +88,12 @@ jobs:
           Verify your download with SHA256 checksums in `checksums.txt`.
           
           **Full Changelog**: https://github.com/Ja-Crispy/git-activity-mirror/commits/${{ steps.version.outputs.VERSION }}
+        files: |
+          git-activity-mirror-windows-amd64.exe
+          git-activity-mirror-linux-amd64
+          git-activity-mirror-darwin-amd64
+          git-activity-mirror-darwin-arm64
+          checksums.txt
         draft: false
         prerelease: false
     
-    - name: Upload Windows Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./git-activity-mirror-windows-amd64.exe
-        asset_name: git-activity-mirror-windows-amd64.exe
-        asset_content_type: application/octet-stream
-    
-    - name: Upload Linux Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./git-activity-mirror-linux-amd64
-        asset_name: git-activity-mirror-linux-amd64
-        asset_content_type: application/octet-stream
-    
-    - name: Upload macOS Intel Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./git-activity-mirror-darwin-amd64
-        asset_name: git-activity-mirror-darwin-amd64
-        asset_content_type: application/octet-stream
-    
-    - name: Upload macOS Apple Silicon Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./git-activity-mirror-darwin-arm64
-        asset_name: git-activity-mirror-darwin-arm64
-        asset_content_type: application/octet-stream
-    
-    - name: Upload Checksums
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./checksums.txt
-        asset_name: checksums.txt
-        asset_content_type: text/plain
